added new file connections and styles

--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ ul{
 }
 
 body{
-	/* font-family: 'Fira Sans', sans-serif; */
+	
 	font-family: 'Roboto Condensed', sans-serif;
 	font-weight: 400;
 	font-size: 16px;
@@ -67,3 +67,81 @@ body{
 	color: #fefefe;
 }
 /* header styles end */
+
+/* section top styles start */
+.top {
+}
+.container {
+}
+.top__heading {
+	display: flex;
+	padding-top: 50px 0 30px;
+}
+
+.top__content {
+	text-align: center;
+	padding-top: 90px;
+	width: 50%;
+}
+
+.top__title {
+	font-family: 'Fira Sans', sans-serif;
+	font-weight: 500;
+	font-size: 48px;
+	line-height: 58px;
+	margin-bottom: 0 auto 20px;
+	max-width: 455px;
+}
+.top__text {
+	font-size: 24px;
+line-height: 28px;
+margin-bottom: 0 auto 60px;
+max-width: 470px;
+}
+.aplication-btn {
+	display: inline-block;
+	padding: 16px 19px 15px;
+	text-transform: uppercase;
+	background: #C5AC2D;
+	color: #FEFEFE;
+	transition: all .5s;
+	border: 1px solid transparent;
+	max-width: 200px;
+	height: 50px;
+}
+
+.aplication-btn:hover{
+	background:#FEFEFE;
+	color: #C5AC2D;
+	border: 1px solid #C5AC2D;
+}
+.top__slider {
+	width: 50%;
+}
+.click-dots{
+	list-style: none;
+}
+
+.click-dots button{
+	font-size: 0;
+}
+
+.top__slider-item {
+}
+.top__slider-img {
+}
+.top__slider-text {
+}
+.top__bottom {
+}
+.top__items {
+}
+.top__item {
+}
+.top__item-img {
+}
+.top__item-text {
+}
+.top__link {
+}
+/* section top styles end */
