--- a/css/style.css
+++ b/css/style.css
@@ -75,7 +75,7 @@ body{
 }
 .top__heading {
 	display: flex;
-	padding-top: 50px 0 30px;
+	padding: 50px 0 30px;
 }
 
 .top__content {
@@ -89,14 +89,15 @@ body{
 	font-weight: 500;
 	font-size: 48px;
 	line-height: 58px;
-	margin-bottom: 0 auto 20px;
+	margin: 0 auto 20px;
 	max-width: 455px;
 }
+
 .top__text {
 	font-size: 24px;
-line-height: 28px;
-margin-bottom: 0 auto 60px;
-max-width: 470px;
+	line-height: 28px;
+	margin: 0 auto 60px;
+	max-width: 470px;
 }
 .aplication-btn {
 	display: inline-block;
@@ -106,8 +107,6 @@ max-width: 470px;
 	color: #FEFEFE;
 	transition: all .5s;
 	border: 1px solid transparent;
-	max-width: 200px;
-	height: 50px;
 }
 
 .aplication-btn:hover{
