added changes in files

--- a/css/style.css
+++ b/css/style.css
@@ -69,10 +69,7 @@ body{
 /* header styles end */
 
 /* section top styles start */
-.top {
-}
-.container {
-}
+
 .top__heading {
 	display: flex;
 	padding: 50px 0 30px;
@@ -117,30 +114,88 @@ body{
 .top__slider {
 	width: 50%;
 }
-.click-dots{
-	list-style: none;
+
+.top__slider .slick-dots{
+	position: absolute;
+	right: 0;
+	top: 50%;
+	transform: translateY(-50%);
 }
 
-.click-dots button{
+.slick-dots{
+	list-style: none; 
+	text-align: center;
+}
+
+.slick-dots button{
 	font-size: 0;
+	width: 8px;
+	height: 8px;
+	background: #332208;
+	border: none;
+	border-radius: 50%;
+	padding: 0;
+
 }
 
-.top__slider-item {
+.slick-active button{
+	width: 16px;
+	height: 16px;
 }
-.top__slider-img {
-}
+
 .top__slider-text {
+	padding-right: 100px;
+	text-align: right;
+	font-family: 'Fira Sans', sans-serif;
+	font-weight: 500;
 }
+.top__slider-text span + span{
+	padding-left: 12px;
+}
+
 .top__bottom {
+	display: flex;
+	align-items: flex-end;
+	justify-content: space-between;
 }
 .top__items {
+	width: 50%;
+	display: flex;
+	justify-content: space-around;
 }
-.top__item {
+.top__item{
+	border: 1px solid #332208;
+	padding: 10px;
+	width: 150px;
+	height: 150px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: space-around;
+	text-align: center;
+	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+	cursor: pointer;
+	transition: all .5s;
 }
-.top__item-img {
+
+.top__item:hover{
+	transform: scale(1.25);
 }
-.top__item-text {
+
+.top__links{
+	padding-right: 80px;
 }
+
 .top__link {
+	font-weight: 400;
+	font-size: 16px;
+	line-height: 19px;
+	text-align: center;
+	color: #181818;
+	border-bottom: 1px solid #181818;
+}
+
+.top__link + .top__link {
+	margin-left: 20px;
 }
 /* section top styles end */
