added new block benefits and style css for block benefits ,and img

--- a/css/style.css
+++ b/css/style.css
@@ -265,3 +265,96 @@ body{
 	line-height: 19px;
 }
 /* section rent start end */
+/* !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! */
+/* benefits style start */
+.benefits {
+	padding: 100px 0;
+}
+
+.benefits__title {
+	font-family: 'Fira Sans',sans-serif;
+	font-weight: 500;
+	font-size: 24px;
+	line-height: 29px;
+	margin-bottom: 50px;
+}
+
+.benefits__items {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+.benefits__list {
+	width: 300px;
+}
+.benefits__list-item {
+	margin-bottom: 27px;
+	padding-right: 26px;
+	position: relative;
+	text-align:right;
+}
+
+.benefits__list-item::after{
+	content: "";
+	position: absolute;
+	width: 16px;
+	height: 16px;
+	border-radius: 50%;
+	background: #332208;
+	right: 0;
+	top: 3px;
+}
+
+.benefits__list-item:nth-child(1),
+.benefits__list-item:nth-child(7){
+	margin-right: 10px;
+}
+
+.benefits__list-item:nth-child(2),
+.benefits__list-item:nth-child(6){
+	margin-right: 60px;
+}
+
+.benefits__list-item:nth-child(3),
+.benefits__list-item:nth-child(5){
+	margin-right: 110px;
+}
+
+.benefits__list-item:nth-child(4){
+	margin-right: 155px;
+}
+
+.benefits__content {
+	width: 300px;
+	text-align: right;
+}
+
+.benefits__text {
+	margin-bottom: 30px;
+	text-align: right;
+}
+
+.benefits__text + .benefits__text{
+	margin-left: auto;
+}
+
+.video__popup {
+	background: #C5AC2D;
+	text-transform: uppercase;
+	color: #FEFEFE;
+	padding: 6px 33px 6px 64px;
+	text-align: center;
+	display: inline-block;
+	position: relative;
+}
+
+.video__popup::before{
+	content: '';
+	position: absolute;
+	width: 25px;
+	height: 25px;
+	background: url(../img/benefits/benefits-svg/Group.svg) no-repeat;
+	top: 12px;
+	left: 34px;
+}
+/* benefits style and */
