--- a/css/style.css
+++ b/css/style.css
@@ -358,3 +358,60 @@ body{
 	left: 34px;
 }
 /* benefits style and */
+/* !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! */
+ /* reviews style start */
+.reviews {
+	padding: 100px 0;
+	background: #332208;
+	color: #FEFEFE;
+}
+
+.reviews__title {
+	font-family: 'Fira Sans', sans-serif;
+	font-style: normal;
+	font-weight: 500;
+	font-size: 24px;
+	line-height: 29px;
+	margin-bottom: 70px;
+}
+
+.slick-initialized .reviews__item{
+	display: flex;
+}
+.reviews__item {
+	border: 1px solid #C5AC2D;
+	padding: 45px 30px;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	width: 270px;
+	min-height: 300px;
+	text-align: center;
+	margin-right: 30px;
+}
+.reviews__item-name {
+	font-family: 'Fira Sans', sans-serif;
+	font-style: normal;
+	font-weight: 500;
+	font-size: 24px;
+	line-height: 29px;
+	margin-bottom: 51px;
+}
+
+.reviews__slider .slick-dots button {
+	background-color: #C5AC2D;;
+}
+
+
+.reviews__slider .slick-dots{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin-top: 35px;
+}
+
+.reviews__slider button {
+	margin: 0 5px;
+	line-height: 12px;
+}
+  /* reviews style end */
