--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,6 @@ ul{
 }
 
 body{
-	
 	font-family: 'Roboto Condensed', sans-serif;
 	font-weight: 400;
 	font-size: 16px;
@@ -399,7 +398,7 @@ body{
 }
 
 .reviews__slider .slick-dots button {
-	background-color: #C5AC2D;;
+	background-color: #C5AC2D;
 }
 
 
@@ -415,3 +414,60 @@ body{
 	line-height: 12px;
 }
   /* reviews style end */
+	/* !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! */
+	/* feedback style start */
+	.feedback {
+		padding: 100px 0;
+}
+
+.feedback__inner {
+	display: flex;
+	align-items: center;
+}
+.feedback__images {
+	width: 50%;
+}
+.feedback__form {
+	width: 415px;
+	margin: 0 auto;
+}
+.feedback__title {
+	font-family: 'Fira Sans', sans-serif;
+	font-weight: 500;
+	font-size: 24px;
+	line-height: 29px;
+	margin-bottom: 5px;
+}
+.feedback__text {
+	margin-bottom: 30px;
+}
+.feedback__input {
+	display: block;
+	padding: 20px 0;
+	width: 100%;
+	border: none;
+	border-bottom: 1px solid rgb(0, 0, 0, 0.1);
+}
+
+.feedback__input::placeholder{
+	font-family: 'Roboto Condensed', sans-serif;
+	font-weight: 400;
+	font-size: 16px;
+	line-height: 19px;
+	color: #181818;
+}
+.feedback__btn{
+	font-family: 'Roboto Condensed', sans-serif;
+	font-weight: 400;
+	font-size: 16px;
+	line-height: 19px;
+	margin-top: 50px;
+	text-transform: uppercase;
+	border: none;
+	display: inline-block;
+	color: #FEFEFE;
+	background-color: #C5AC2D;
+	padding: 16px 36px 15px;
+
+}
+	/* feedback style end */
